packages/libs/error-stack/tests/snapshots/test_debug__full__hook_location.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
root error
├╴ backtrace (1)
╰╴ span trace with 2 frames (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
