packages/libs/error-stack/tests/snapshots/test_debug__full__hook_multiple.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
root error
├╴ tests/common/mod.rs:4:5
├╴ backtrace (1)
├╴ span trace with 2 frames (1)
├╴ unsigned 32bit integer
╰╴ unsigned 64bit integer

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
