packages/libs/error-stack/tests/snapshots/test_debug__full__hook_provider_diagnostic.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
Context D
├╴tests/test_debug.rs:666:38
├╴Context E Attachment
│
╰─▶ Root error
    ├╴tests/common.rs:147:5
    ├╴spantrace with 2 frames (1)
    ╰╴backtrace with [n] frames (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Backtrace No. 1
  [redacted]

Span Trace No. 1
  [redacted]
