packages/libs/error-stack/tests/snapshots/test_debug__full__hook_stack.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
├╴tests/common.rs:147:5
├╴unsigned 64-bit integer
├╴unsigned 32bit integer
├╴spantrace with 2 frames (1)
╰╴backtrace with [n] frames (1)
