packages/libs/error-stack/tests/snapshots/test_debug__full__linear_ext.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---
context B
├╴ tests/test_debug.rs:103:14
├╴ printable C
│
├─▶ context A
│   ├╴ tests/test_debug.rs:100:14
│   ├╴ printable B
│   ╰╴ 1 additional opaque attachment
│
╰─▶ root error
    ├╴ tests/common/mod.rs:4:5
    ├╴ backtrace (1)
    ├╴ span trace with 2 frames (1)
    ├╴ printable A
    ╰╴ 2 additional opaque attachments

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
