packages/libs/error-stack/tests/snapshots/test_debug__full__multiline_context.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---
context B
├╴ tests/test_debug.rs:128:14
├╴ printable C
│
├─▶ A multiline
│   context that might have
│   a bit more info
│   ├╴ tests/test_debug.rs:125:14
│   ├╴ printable B
│   ╰╴ 1 additional opaque attachment
│
╰─▶ A multiline
    context that might have
    a bit more info
    ├╴ tests/test_debug.rs:124:22
    ╰╴ backtrace (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]
