packages/libs/error-stack/tests/snapshots/test_debug__full__multiline_ctx.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---
Context B
├╴tests/test_debug.rs:331:14
├╴Printable C
│
├─▶ A multiline
│   context that might have
│   a bit more info
│   ├╴tests/test_debug.rs:328:14
│   ├╴Printable B
│   ╰╴1 additional opaque attachment
│
╰─▶ Root error
    ├╴tests/common.rs:147:5
    ├╴spantrace with 2 frames (1)
    ╰╴backtrace with [n] frames (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Backtrace No. 1
  [redacted]

Span Trace No. 1
  [redacted]
