packages/libs/error-stack/tests/snapshots/test_debug__full__norm.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
root error
├╴ tests/common.rs:162:5
├╴ backtrace (1)
├╴ span trace with 2 frames (1)
╰╴ Empty

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
