packages/libs/error-stack/tests/snapshots/test_debug__full__provider.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
├╴tests/common.rs:147:5
├╴Printable A
├╴spantrace with 2 frames (1)
╰╴backtrace with [n] frames (1)

Root error
├╴tests/common.rs:147:5
├╴Test
├╴Printable B
├╴spantrace with 2 frames (2)
├╴backtrace with [n] frames (2)
╰╴1 additional attachment

Root error
├╴tests/common.rs:147:5
├╴Test
├╴Printable B
├╴ABC
├╴spantrace with 2 frames (3)
├╴backtrace with [n] frames (3)
╰╴2 additional attachments
